--- a/juego.html
+++ b/juego.html
@@ -114,6 +114,7 @@
             <a href="./testimonios.html">Testimonios</a>
             <a href="./formulario.html">Contácto</a>
             <a href="./juego.html">Juego</a>
+            <a href="./login.html">Log in</a>
             <form class="buscar" action="https://www.google.com/search" method="get">
                 <!-- Input Busqueda-->
                 <input class="caja" type="search" name="q" id="busqueda" placeholder="Buscar"><input class="lupa" type="submit" value="Enviar">
