--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
     <div class="form-container">
       <h1>Iniciar sesión</h1>
       <p>Escribe tus credenciales para ingresar.</p>
-      <form id="login-form">
+      <form onsubmit="return false" id="login-form">
         <label for="user" class="sr-only">User</label>
         <input type="text" name="user" id="user" placeholder="Usuario">
         <label for="password" class="sr-only">Password</label>
