--- a/login.html
+++ b/login.html
@@ -10,6 +10,7 @@
 <body>
   <main>
     <div class="form-container">
+      <a href="index.html"><img src="/img/flecha-hacia-atras.png" width="30px"></a>
       <h1>Iniciar sesión</h1>
       <p>Escribe tus credenciales para ingresar.</p>
       <form onsubmit="return false" id="login-form">
