--- a/register.html
+++ b/register.html
@@ -11,6 +11,7 @@
 <body>
   <main>
     <div class="form-container">
+      <a href="index.html"><img src="/img/flecha-hacia-atras.png" width="30px"></a>
       <h1>Crear cuenta</h1>
       <p>Crea tu cuenta para ingresar.</p>
       <form onsubmit="return false" id="register-form">
