--- a/testimonios.html
+++ b/testimonios.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Maestro</title>
     <link rel="stylesheet" href="style.css">
+    <script src="./views/dinamic.js" type="module" defer></script>
 </head>
 <body>
     
@@ -14,13 +15,14 @@
         <label for="check" class="mostrar-menu">&#8801</label>
     
         <nav class="menu">
+            <a href="#" id="NomUser"></a>
             <a href="./index.html">Inicio</a>
             <a href="./about.html">Sobre mí</a>
             <a href="./trabajos.html">Mis trabajos</a>
             <a href="./testimonios.html">Testimonios</a>
             <a href="./formulario.html">Contácto</a>
             <a href="./juego.html">Juego</a>
-            <a href="./login.html">Log in</a>
+            <a href="./login.html" id="opInicio">Log in</a>
             <form class="buscar" action="https://www.google.com/search" method="get">
                 <!-- Input Busqueda-->
                 <input class="caja" type="search" name="q" id="busqueda" placeholder="Buscar"><input class="lupa" type="submit" value="Enviar">
@@ -65,12 +67,12 @@
             </div>
             <div class="seis">
                 <img src="./img/mujer.webp" alt="baldosas">
-                <h6>Marcos Vargas</h6>
+                <h6>Alberto Serrano</h6>
                 <p>"Ha hecho un trabajo muy profesional, con el cambio de todas las baldosas de mi casa, incluyendo las de los baños y las de la cocina. Lo recomiendo por su arduo trabajo".</p>
             </div>
             <div class="cuatro">
                 <img src="./img/persona.png" alt="baldosas">
-                <h6>Marcos Vargas</h6>
+                <h6>Mariana Vargas</h6>
                 <p>"Ha hecho un trabajo muy profesional, con el cambio de todas las baldosas de mi casa, incluyendo las de los baños y las de la cocina. Lo recomiendo por su arduo trabajo".</p>
             </div>
         </div>
