--- a/juego.html
+++ b/juego.html
@@ -6,6 +6,7 @@
     <title>Juego baldosas</title>
     <link rel="stylesheet" href="style.css">
     <script src="./views/juego.js" type="module" defer></script>
+    <script src="./views/dinamic.js" type="module" defer></script>
     <style>
         /* VARIABLES DE COLORES  */
         :root {
@@ -108,13 +109,14 @@
         <label for="check" class="mostrar-menu">&#8801</label>
     
         <nav class="menu">
+            <a href="#" id="NomUser"></a>
             <a href="./index.html">Inicio</a>
             <a href="./about.html">Sobre mí</a>
             <a href="./trabajos.html">Mis trabajos</a>
             <a href="./testimonios.html">Testimonios</a>
             <a href="./formulario.html">Contácto</a>
             <a href="./juego.html">Juego</a>
-            <a href="./login.html">Log in</a>
+            <a href="./login.html" id="opInicio">Log in</a>
             <form class="buscar" action="https://www.google.com/search" method="get">
                 <!-- Input Busqueda-->
                 <input class="caja" type="search" name="q" id="busqueda" placeholder="Buscar"><input class="lupa" type="submit" value="Enviar">
