--- a/testimonios.html
+++ b/testimonios.html
@@ -67,7 +67,7 @@
             </div>
             <div class="seis">
                 <img src="./img/mujer.webp" alt="baldosas">
-                <h6>Alberto Serrano</h6>
+                <h6>Jessica Rueda</h6>
                 <p>"Ha hecho un trabajo muy profesional, con el cambio de todas las baldosas de mi casa, incluyendo las de los baños y las de la cocina. Lo recomiendo por su arduo trabajo".</p>
             </div>
             <div class="cuatro">
