Intentando conectar la Firebase

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Maestro</title>
     <link rel="stylesheet" href="style.css">
+    <script src="./db/db.js" type="module" defer></script>
     <script src="./views/dinamic.js" type="module" defer></script>
 </head>
 <body>
