--- a/login.html
+++ b/login.html
@@ -5,7 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Iniciar sesión</title>
   <link rel="stylesheet" href="style-login-register.css">
+  <script src="./db/db.js" type="module" defer></script>
   <script src="./views/login.js" type="module" defer></script>
+  <script src="./views/auth.js" type="module" defer></script>
+  
 </head>
 <body>
   <main>
@@ -19,6 +22,7 @@
         <label for="password" class="sr-only">Password</label>
         <input type="password" name="password" id="password" placeholder="Contraseña">
         <button type="submit" value="Ingresar">Iniciar sesión</button>
+        <button type="submit" value="IngGoogle" id="button-login">Iniciar con Google</button>
         <p class="error escondido">Error al iniciar sesión</p>
       </form>
       <p>¿Todavía no tienes una cuenta? - <a href="./register.html">Registrate</a></p>
