--- a/register.html
+++ b/register.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Registro</title>
   <link rel="stylesheet" href="style-login-register.css">
-  
+  <script src="./db/db.js" type="module" defer></script>
   <script src="./views/login.js" type="module" defer></script>
 </head>
 <body>
